Được tạo bằng Colab

--- a/vietocr_gettingstart.ipynb
+++ b/vietocr_gettingstart.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/pbcquoc/vietocr/blob/master/vietocr_gettingstart.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/BuiDoKhoiNguyen/vietocr/blob/master/vietocr_gettingstart.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -65,7 +65,7 @@
       "source": [
         "! pip install --quiet vietocr"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "from vietocr.tool.predictor import Predictor\n",
         "from vietocr.tool.config import Cfg"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "source": [
         "config = Cfg.load_config_from_name('vgg_transformer')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
         "config['cnn']['pretrained']=False\n",
         "config['device'] = 'cuda:0'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "source": [
         "detector = Predictor(config)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +174,7 @@
         "! wget https://vocr.vn/data/vietocr/sample.zip\n",
         "! unzip  -qq -o sample.zip"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +207,7 @@
       "source": [
         "! ls sample | shuf |head -n 5"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "s = detector.predict(img)\n",
         "s"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +281,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "kMMAabbInNe3",
-        "outputId": "d5392602-06f8-44b3-8dc4-39baaf6b536a",
+        "outputId": "a06cb6f1-4676-4fd9-8a7d-163cfba177ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -289,22 +289,22 @@
       "source": [
         "! wget https://vocr.vn/data/vietocr/data_line.zip"
       ],
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-12-07 14:28:11--  https://vocr.vn/data/vietocr/data_line.zip\n",
+            "--2025-04-29 06:53:01--  https://vocr.vn/data/vietocr/data_line.zip\n",
             "Resolving vocr.vn (vocr.vn)... 128.199.222.116\n",
             "Connecting to vocr.vn (vocr.vn)|128.199.222.116|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 61212284 (58M) [application/zip]\n",
             "Saving to: ‘data_line.zip’\n",
             "\n",
-            "data_line.zip       100%[===================>]  58.38M  12.9MB/s    in 5.6s    \n",
+            "data_line.zip       100%[===================>]  58.38M  16.9MB/s    in 4.4s    \n",
             "\n",
-            "2022-12-07 14:28:18 (10.5 MB/s) - ‘data_line.zip’ saved [61212284/61212284]\n",
+            "2025-04-29 06:53:06 (13.3 MB/s) - ‘data_line.zip’ saved [61212284/61212284]\n",
             "\n"
           ]
         }
@@ -318,7 +318,7 @@
       "source": [
         "! unzip -qq -o ./data_line.zip"
       ],
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -355,14 +355,42 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jMwREzEvm_jd"
+        "id": "jMwREzEvm_jd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 339
+        },
+        "outputId": "243ec06a-e995-4736-f22f-3bd344f53a60"
       },
       "source": [
         "from vietocr.tool.config import Cfg\n",
         "from vietocr.model.trainer import Trainer"
       ],
-      "execution_count": 21,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'vietocr'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-2b511b56fac3>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mvietocr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCfg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mvietocr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainer\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTrainer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'vietocr'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -370,7 +398,7 @@
         "id": "7oKRCu2ewNE4"
       },
       "source": [
-        "# Change the config \n",
+        "# Change the config\n",
         "\n",
         "* *data_root*: the folder save your all images\n",
         "* *train_annotation*: path to train annotation\n",
@@ -390,7 +418,7 @@
       "source": [
         "config = Cfg.load_config_from_name('vgg_transformer')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -411,7 +439,7 @@
         "         'print_every':200,\n",
         "         'valid_every':15*200,\n",
         "          'iters':20000,\n",
-        "          'checkpoint':'./checkpoint/transformerocr_checkpoint.pth',    \n",
+        "          'checkpoint':'./checkpoint/transformerocr_checkpoint.pth',\n",
         "          'export':'./weights/transformerocr.pth',\n",
         "          'metrics': 10000\n",
         "         }\n",
@@ -420,7 +448,7 @@
         "config['dataset'].update(dataset_params)\n",
         "config['device'] = 'cuda:0'"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -444,7 +472,7 @@
       "source": [
         "config"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +529,7 @@
         "id": "8dxTXpqa3Hd3"
       },
       "source": [
-        "You should train model from our pretrained "
+        "You should train model from our pretrained"
       ]
     },
     {
@@ -516,7 +544,7 @@
       "source": [
         "trainer = Trainer(config, pretrained=True)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,7 +611,7 @@
       "source": [
         "trainer.config.save('config.yml')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +636,7 @@
       "source": [
         "trainer.visualize_dataset()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -826,7 +854,7 @@
       "source": [
         "trainer.train()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
